--- a/5_NoSQL_and_MongoDB/views/home.hbs
+++ b/5_NoSQL_and_MongoDB/views/home.hbs
@@ -1,13 +1,2 @@
-<main>
-  <h1>Browser</h1>
-  <form action='/products' method='GET'>
-    <input type='text' class='search' name='search' placeholder='Search...' />
-    <input type='number' name='from' class='difficulty' placeholder='Difficulty from...' />
-    <span>-</span>
-    <input type='number' name='to' class='difficulty' placeholder='Difficulty to...' />
-    <input type='submit' value='search' />
-  </form>
-  {{#each products}}
-    {{>cube}}
-  {{/each}}
-</main>
+<h1>Stefan Sambista from the template</h1>
+<h2>Hello {{name}}. Stefan is very {{anger}}</h2>
