--- a/5_NoSQL_and_MongoDB/views/layouts/main.hbs
+++ b/5_NoSQL_and_MongoDB/views/layouts/main.hbs
@@ -1,26 +1,12 @@
 <html lang='en'>
-
   <head>
     <meta charset='UTF-8' />
-    <title>{{title}}</title>
-    <link href='/css/site.css' type='text/css' rel='stylesheet' />
-    <link rel='shortcut icon' type='image/x-icon' href='/images/favicon.png' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+    <link rel='stylesheet' href='/static/style.css' />
+    <title>Klucki</title>
   </head>
-
   <body>
-    <div class='container'>
-      <header>
-        <ul>
-          <li><a href="/" class="img_a"><img class='logo' src='/images/logo.png'/></a></li>
-          <li><a href='/'>Browse</a></li>
-          <li><a href='/products/create'>Add a Cube</a></li>
-          <li><a href='/about'>About</a></li>
-        </ul>
-      </header>
-      {{{body}}}
-    </div>
-    <footer>@Cubicle: Exercise for Express.js and Handlebars</footer>
-
+    {{{body}}}
+    <footer>By Mishakaveli</footer>
   </body>
-
 </html>
