--- a/6_NoSQL_and_MongoDB_Workshop/public/css/site.css
+++ b/6_NoSQL_and_MongoDB_Workshop/public/css/site.css
@@ -15,10 +15,6 @@ img {
     width: auto;
 }
 
-.img_a {
-    margin: 0px;
-}
-
 img.cube {
     display: block;
     margin: 0 auto;
@@ -94,6 +90,7 @@ p.name {
     border-bottom: 1px solid #2b415433;
 }
 
+
 button, main a.btn {
     border: none;
     padding: 8px;
@@ -101,9 +98,8 @@ button, main a.btn {
     text-decoration: none;
     display: inline-block;
     font-size: 18px;
-    width: 43%;
+    width: 35%;
     margin: 12px;
-    margin-left: 6%;
     border-radius: 4px;
     background: #607588;
     color: white;
@@ -224,13 +220,26 @@ span.error {
     display: block;
 }
 
-img#sadFaceImg {
+img#sadFaceImg{
     display: block;
     margin: 0 auto;
 }
 
-h2 {
+h2{
     text-align: center;
+}
+
+.accessories .accessory{
+    display: inline-block;
+    background-color: #f3f3f2;
+    width: 20%;
+    padding: 1%;
+    margin: 1%;
+}
+
+.accessories, .italic{
+    text-align: center;
+    font-style: italic;
 }
 
 footer {
