--- a/8_Session_and_Authentication_Excercise/views/details.hbs
+++ b/8_Session_and_Authentication_Excercise/views/details.hbs
@@ -5,7 +5,11 @@
     <p><span>Description:</span>{{product.description}}</p>
     <p><span>Difficulty level:</span> {{product.difficultyLevel}}</p>
     <a class="btn" href="/products">Back</a>
-    <a class="btn" href="/products/{{product._id}}/attach">Attach</a>
+    {{#if isAuthenticated}}
+      <a class="btn" href="/products/{{product._id}}/attach">Attach</a>
+      <a class="btn" href="/products/{{product._id}}/edit">Edit</a>
+      <a class="btn" href="/products/{{product._id}}/delete">Delete</a>
+    {{/if}}
   </div>
   <h2>Accessories</h2>
   <div class="accessories">
