--- a/8_Session_and_Authentication_Excercise/views/partials/cube.hbs
+++ b/8_Session_and_Authentication_Excercise/views/partials/cube.hbs
@@ -4,6 +4,8 @@
   <p><span>Difficulty level:</span> {{difficultyLevel}}</p>
   <a class='btn' href='/products/details/{{_id}}'>Details</a>
   {{#if isAuthenticated}}
-    <a class='btn' href='/products/{{_id}}/attach'>Attach</a>
+    {{#eq userId creator}}
+      <a class='btn' href='/products/{{_id}}/attach'>Attach</a>
+    {{/eq}}
   {{/if}}
 </div>
