--- a/8_Session_and_Authentication_Excercise/views/deleteCube.hbs
+++ b/8_Session_and_Authentication_Excercise/views/deleteCube.hbs
@@ -1,13 +1,13 @@
 <main>
   <h1>Delete Cube</h1>
   <div class="form">
-    <form action="/product/delete" method="POST">
+    <form action="/products/{{product._id}}/delete" method="POST">
       <label for="name">Name</label>
-      <input type="text" id="name" name="name" value="" disabled="true" />
+      <input type="text" id="name" name="name" value="{{product.name}}" disabled="true" />
       <label for="name">Description</label>
-      <textarea id="name" name="description" disabled="true" /></textarea>
+      <textarea id="name" name="description" disabled="true" />{{product.description}}</textarea>
       <label for="image">ImageUrl</label>
-      <input type="text" id="image" name="imageUrl" value="" disabled="true" />
+      <input type="text" id="image" name="imageUrl" value="{{product.imageUrl}}" disabled="true" />
       <label for="difficulty">Difficulty</label>
       <select id="difficulty" name="difficultyLevel" value="" disabled="true" />
       <option value="1">1 - Very Easy</option>
@@ -21,3 +21,7 @@
     </form>
   </div>
 </main>
+
+<script>
+  document.querySelector(`option[value="{{product.difficultyLevel}}"]`).setAttribute("selected", "true")
+</script>
