--- a/8_Session_and_Authentication_Excercise/views/home.hbs
+++ b/8_Session_and_Authentication_Excercise/views/home.hbs
@@ -8,7 +8,7 @@
     <input type="submit" value="search" />
   </form>
   {{#each products}}
-    {{!-- {{log ../isAuthenticated}} --}}
-    {{> cube isAuthenticated=../isAuthenticated}}
+    {{!-- {{log ../user.id}} --}}
+    {{> cube isAuthenticated=../isAuthenticated userId=../user.id}}
   {{/each}}
 </main>
