--- a/9_Validation_and_Error_Handling/views/register.hbs
+++ b/9_Validation_and_Error_Handling/views/register.hbs
@@ -15,6 +15,9 @@
       <label for="repeatPassword">Re-Password</label>
       <input type="password" id="repeatPassword" name="repeatPassword">
 
+      <label for="email">Email</label>
+      <input type="text" id="email" name="email">
+
       <input type="submit" value="Register">
     </form>
   </div>
