--- a/12_Exam_Exercise_2/views/courses/course-details.hbs
+++ b/12_Exam_Exercise_2/views/courses/course-details.hbs
@@ -11,10 +11,16 @@
         <h3 class="my-3">Course Description</h3>
         <p>{{course.description}}</p>
 
-        <a class="btn btn-danger" href="/">Delete</a>
-        <a class="btn btn-warning" href="/">Edit</a>
-        <span class="enrolled-span">You are already enrolled</span>
-        <a class="btn btn-primary" href="/">Enroll</a>
+        {{#if course.isOwner}}
+          <a class="btn btn-danger" href="/course/{{course._id}}/delete">Delete</a>
+          <a class="btn btn-warning" href="/course/{{course._id}}/edit">Edit</a>
+        {{else}}
+          {{#if course.isEnrolled}}
+            <span class="enrolled-span">You are already enrolled</span>
+          {{else}}
+            <a class="btn btn-primary" href="/course/{{course._id}}/enroll">Enroll</a>
+          {{/if}}
+        {{/if}}
       </div>
     </div>
   </div>
