Finished JS Bancend Course

--- a/12_Exam_Exercise_2/public/css/site.css
+++ b/12_Exam_Exercise_2/public/css/site.css
@@ -25,8 +25,9 @@
     border-radius: 4px;
 }
 
-.notifications {
-    background-color: rgba(240, 46, 46, 0.699);
+.notifications-error,
+.notifications-success {
+    font-weight: bold;
     margin: 0 auto;
     text-align: center;
     padding: 1%;
@@ -37,4 +38,13 @@
     font-style: italic;
     text-decoration: underline;
     box-shadow: 0 5px 10px #cccccc;
+}
+
+
+.notifications-error {
+    background-color: rgba(240, 46, 46, 0.699);
+}
+
+.notifications-success {
+    background-color: green;
 }
