--- a/12_Exam_Exercise_2/views/home/home.hbs
+++ b/12_Exam_Exercise_2/views/home/home.hbs
@@ -5,8 +5,8 @@
             <a href="/course/create" class="btn btn-warning ">Create Course</a>
             <form class="search float-right">
                 <label>Search: </label>
-                <input type="text">
-                <input type="submit" class="btn btn-info" value="Search">
+                <input type="text" name="search">
+                <input type="submit" class="btn btn-info" value="Search" method="GET">
             </form>
         </section>
     {{else}}
