Added numerous fixes

--- a/12_Exam_Exercise_2/views/courses/details.hbs
+++ b/12_Exam_Exercise_2/views/courses/details.hbs
@@ -17,6 +17,7 @@
         {{else}}
           {{#if course.isEnrolled}}
             <span class="enrolled-span">You are already enrolled</span>
+            <a class="btn btn-primary" href="/course/{{course._id}}/unenroll">Unenroll</a>
           {{else}}
             <a class="btn btn-primary" href="/course/{{course._id}}/enroll">Enroll</a>
           {{/if}}
