--- a/12_Exam_Exercise_2/public/css/site.css
+++ b/12_Exam_Exercise_2/public/css/site.css
@@ -48,3 +48,18 @@
 .notifications-success {
     background-color: green;
 }
+
+#sadface-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 30px;
+}
+
+#sadFaceImg {
+    width: 500px;
+}
+
+#main-container{
+    max-width: 80%;
+}
