--- a/12_Exam_Exercise_2/views/layouts/main.hbs
+++ b/12_Exam_Exercise_2/views/layouts/main.hbs
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container" id="main-container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand">Video Tutorials</a>
 
